Migrate silicon fully to ftb materials